--- a/main.html
+++ b/main.html
@@ -3,13 +3,17 @@
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script>
-        $(function () {
-            $("#nav").load("views/nav.html");
+        $(document).ready(function () {
+            $("div[html-include]").each(function (){
+                var data = $(this).attr("html-include");
+                $(this).load("views/" + data);
+            });
         });
     </script>
 </head>
 
 <body>
-    <div id="nav"></div>
+    <div html-include="nav.html"></div>
+    <div html-include="hey.html"></div>
 </body>
 </html>
