--- a/main.html
+++ b/main.html
@@ -14,6 +14,6 @@
 
 <body>
     <div html-include="nav.html"></div>
-    <div html-include="hey.html"></div>
+    <div html-include="mainpage.html"></div>
 </body>
 </html>
