--- a/main.html
+++ b/main.html
@@ -3,6 +3,8 @@
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script>
+        $('head').load("./views/head.html")
+
         $(document).ready(function () {
             $("div[html-include]").each(function (){
                 var data = $(this).attr("html-include");
@@ -14,6 +16,8 @@
 
 <body>
     <div html-include="nav.html"></div>
+    <div id="nav_spacer"></div>
     <div html-include="main_content.html"></div>
+    <div html-include="footer.html"></div>
 </body>
 </html>
