--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <script>
-        $('head').load("./views/head.html")
-    </script>
+    <script>$('head').load("./views/head.html")</script>
 </head>
 
 <body>
