--- a/skills.html
+++ b/skills.html
@@ -2,16 +2,7 @@
 
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-    <script>
-        $('head').load("./views/head.html")
-
-        $(document).ready(function () {
-            $("div[html-include]").each(function () {
-                var data = $(this).attr("html-include");
-                $(this).load("views/" + data);
-            });
-        });
-    </script>
+    <script>$('head').load("./views/head.html")</script>
 </head>
 
 <body>
